--- a/ApplicationParser/ApplicationParser.csproj
+++ b/ApplicationParser/ApplicationParser.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>ApplicationParser</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -42,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Application.cs" />
     <Compile Include="FieldNotLoadedException.cs" />
+    <Compile Include="Script.cs" />
     <Compile Include="Tab.cs" />
     <Compile Include="Field.cs" />
     <Compile Include="ArtifactDef.cs" />
