--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,4 +8,4 @@ build:
   project: ApplicationParser.sln
   verbosity: minimal
 after_build:
-- ps: nuget/build.ps1 -Version %APPVEYOR_BUILD_VERSION%
+- ps: nuget/build.ps1 -Version $env:APPVEYOR_BUILD_VERSION
