--- a/ApplicationParser.Tests/ApplicationParser.Tests.csproj
+++ b/ApplicationParser.Tests/ApplicationParser.Tests.csproj
@@ -130,9 +130,10 @@
     <Compile Include="ParseTestHelper.cs" />
     <Compile Include="ParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="Writers\ApplicationWriterTests.cs" />
     <Compile Include="Writers\ChoiceWriterTests.cs" />
-    <Compile Include="Writers\PropertyWriterTests.cs" />
+    <Compile Include="Writers\ClassWriterTests.cs" />
     <Compile Include="Writers\ScriptWriterTests.cs" />
     <Compile Include="Writers\TabWriterTests.cs" />
     <Compile Include="WriterTests.cs" />
