--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,13 +1,25 @@
 version: 1.0.{build}
+skip_branch_with_pr: true
+pull_requests:
+  do_not_increment_build_number: true
 image: Visual Studio 2017
 configuration: Release
 platform: Any CPU
+nuget:
+  disable_publish_on_pr: true
 before_build:
 - ps: nuget restore
 build:
   project: ApplicationParser.sln
   verbosity: minimal
 after_build:
-- ps: nuget/build.ps1 -Version $env:appveyor_build_version
+- ps: nuget/build.ps1 -Version $(appveyor_build_version)
 artifacts:
 - path: nuget\*.nupkg
+deploy:
+- provider: NuGet
+  api_key:
+    secure: R3VDZ8zxCPzc6RJRQ+fljT2pPdA8mXvbh45D7LIqSXWyk6itJUM1qw2iCuqK80FU
+  skip_symbols: true
+  on:
+    branch: master
