--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,10 @@ build:
   project: ApplicationParser.sln
   verbosity: minimal
 after_build:
-- ps: nuget/build.ps1 -Version $env:appveyor_build_version
+- ps: >-
+    if($env:appveyor_repo_branch -eq 'master') {
+         nuget/build.ps1 -Version $env:appveyor_build_version
+    }
 artifacts:
 - path: nuget\*.nupkg
 deploy:
