--- a/ApplicationParser.Generator.T4/ApplicationParser.Generator.T4.csproj
+++ b/ApplicationParser.Generator.T4/ApplicationParser.Generator.T4.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0C359651-46F6-4536-8B3E-C7531FF0CC68}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{28E42EAC-61FC-4CB2-9A0E-D6491E9C7C31}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Heretik.ApplicationParser</RootNamespace>
-    <AssemblyName>ApplicationParser</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>ApplicationParser</RootNamespace>
+    <AssemblyName>ApplicationParser.Generator.T4</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,37 +29,40 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>ApplicationParser.Generator.T4.Class1</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Esent.Interop, Version=1.9.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\ManagedEsent.1.9.4\lib\net40\Esent.Interop.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Application.cs" />
-    <Compile Include="FieldNotLoadedException.cs" />
-    <Compile Include="Definitions\Script.cs" />
-    <Compile Include="Definitions\Tab.cs" />
-    <Compile Include="Definitions\Field.cs" />
-    <Compile Include="Definitions\ArtifactDef.cs" />
-    <Compile Include="Definitions\ObjectDef.cs" />
-    <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Types.cs" />
     <Compile Include="Writer.cs" />
     <Compile Include="Writers\ApplicationWriter.cs" />
     <Compile Include="Writers\ChoiceWriter.cs" />
-    <Compile Include="Writers\TabWriter.cs" />
     <Compile Include="Writers\ClassWriter.cs" />
     <Compile Include="Writers\ScriptWriter.cs" />
+    <Compile Include="Writers\TabWriter.cs" />
     <Compile Include="Writers\WriterUtils.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <None Include="app.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ApplicationParser\ApplicationParser.Core.csproj">
+      <Project>{0c359651-46f6-4536-8b3e-c7531ff0cc68}</Project>
+      <Name>ApplicationParser.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
