added object rules to the mix

--- a/ApplicationParser.Generator.T4/ApplicationParser.Generator.T4.csproj
+++ b/ApplicationParser.Generator.T4/ApplicationParser.Generator.T4.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Writers\ApplicationWriter.cs" />
     <Compile Include="Writers\ChoiceWriter.cs" />
     <Compile Include="Writers\ClassWriter.cs" />
+    <Compile Include="Writers\ObjectRuleWriter.cs" />
     <Compile Include="Writers\ScriptWriter.cs" />
     <Compile Include="Writers\TabWriter.cs" />
     <Compile Include="Writers\WriterUtils.cs" />
