--- a/ApplicationParser.Generator.T4/ApplicationParser.Generator.T4.csproj
+++ b/ApplicationParser.Generator.T4/ApplicationParser.Generator.T4.csproj
@@ -99,6 +99,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Writer.cs" />
+    <Compile Include="Writers\LayoutWriter.cs" />
     <Compile Include="Writers\ApplicationWriter.cs" />
     <Compile Include="Writers\ChoiceWriter.cs" />
     <Compile Include="Writers\ClassWriter.cs" />
