--- a/ApplicationParser/ApplicationParser.Core.csproj
+++ b/ApplicationParser/ApplicationParser.Core.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Application.cs" />
+    <Compile Include="Definitions\Layout.cs" />
     <Compile Include="Definitions\ObjectRule.cs" />
     <Compile Include="FieldNotLoadedException.cs" />
     <Compile Include="Definitions\Script.cs" />
